--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -5,18 +5,16 @@
         <th>Operational</th>
         <th>Orbit Type</th>
         <th>Launch Date</th>
-        <th>TESTING</th> <!-- Don't forget to delete-->
     </tr>
-    <tr class="data-row" *ngFor = "let satellite of satellites">
-        <td>{{satellite.name}}</td>
-        <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
+    <tr class="data-row" *ngFor = "let satellite of satellites"> <!-- TODO 2b: use *ngFor to display satellite data in the table -->
+        <td >{{satellite.name}}</td>
+        <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td> <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
         <td>{{satellite.operational}}</td>
         <td>{{satellite.orbitType}}</td>
         <td>{{satellite.launchDate}}</td>
-        <td>TESTING</td> <!-- Don't forget to delete-->
     </tr>
 </table>
 
-<!-- TODO 2b: use *ngFor to display satellite data in the table -->
-<!-- TODO 3b: add style directive to conditionally highlight satellite type -->
+
+
 
